<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/main"
        android:layout_weight=".5"
        android:visibility="visible"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="00:00:00"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/homebtn"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/hintbtn"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/button"
            android:text="Home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt2"
            app:layout_constraintVertical_bias="0.212"
            tools:text="Home" />

        <Button
            android:id="@+id/hintbtn"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/mapbtn"
            android:layout_marginStart="118dp"
            android:text="HINT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/homebtn"
            app:layout_constraintTop_toBottomOf="@+id/txt2"
            app:layout_constraintVertical_bias="0.209"
            tools:text="Hint" />

        <Button
            android:id="@+id/mapbtn"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_alignTop="@+id/vbtn"
            android:layout_toStartOf="@+id/vbtn"
            android:contentDescription="@string/button"
            android:text="MAP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toEndOf="@+id/hintbtn"
            app:layout_constraintTop_toBottomOf="@+id/txt2"
            app:layout_constraintVertical_bias="0.209"
            tools:text="Map" />

        <Button
            android:id="@+id/vbtn"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="94dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/button"
            android:text="VIDEO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toEndOf="@+id/mapbtn"
            app:layout_constraintTop_toBottomOf="@+id/txt2"
            app:layout_constraintVertical_bias="0.209"
            tools:text="Video" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/sbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="62dp"
            android:contentDescription="@string/button"
            android:text="UNLOCK"

            tools:text="Unlock" />

        <Button
            android:id="@+id/qbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="41dp"
            android:layout_marginTop="49dp"
            android:text="@string/qr_code"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="97dp"
            android:contentDescription="@string/button"
            android:text="@string/finshed"
             />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hint"
        android:layout_width="116dp"
        android:layout_height="55dp"
        android:layout_weight=".5"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:visibility="gone">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/map"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/maptxtview"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="18dp"
            android:text="Map:"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="204dp"
            android:layout_height="86dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/common_google_signin_btn_text_dark"
            tools:layout_editor_absoluteY="433dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/video"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/qrcode"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/unlock1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/untxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp"
            android:ems="10"
            android:hint="@string/unlock_key"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <Button
            android:id="@+id/unkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="76dp"
            android:text="@string/unlock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/untxt"
            app:layout_constraintVertical_bias="0.243" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/unlock2"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start_pause"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="74dp"
            android:text="start"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="138dp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/button_start_pause"
            android:layout_marginEnd="43dp"
            android:text="reset"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="268dp"
            tools:layout_editor_absoluteY="239dp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/tempbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            android:text="Button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/finished"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="244dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/fdback"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <EditText
            android:id="@+id/etxt1"
            android:layout_width="235dp"
            android:layout_height="81dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="63dp"
            android:ems="10"
            android:hint="@string/fd_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <Button
            android:id="@+id/fd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            android:text="sent" />


    </RelativeLayout>

</LinearLayout>